G2CC retired: the setup page and the adaptive playlists move into the damage service (HANDOFF §44)
Adam, 2026-09-10: "G2CC is replaced by DamageWM." Its server is off boot and
stopped (its speech daemon had held 10 GB of VRAM); the two jobs it still did
are Damage's now.

- desktop/SetupServer.kt: /setup + /damage-apk on :7300 with the same token
  (setupToken in config.json), the same Tailscale-or-loopback gate and the
  same mtime-stamped filename; the G2CC boxes are gone. Started next to the
  content host; SetupServerTest x3.
- core/.../music/AdaptivePlaylists.kt (MUSIC.md §9.8): the 25 rule-managed
  playlists refresh at host start, after a grab's enrichment and after a
  rescan — G2CC's semantics as our own code; no write when nothing changed.
  Measured: all 6,637 rows reproduced exactly (0 would change).
  AdaptivePlaylistsTest x4; --music-check prints the read-only plan.
- bin/damage: the versionless JDK 17 link (the upgrade removed 17.0.19_p10).
- Records: HANDOFF §44, MUSIC.md §9.8 + verdict 27, DAILY.md (the service
  layout after the reboot: qbittorrent headless, boot order, PATH),
  REMINDER.md, IMPLEMENTATION.md.

Battery: core 525 · desktop 15 · selfcheck x3 · snapshots 57 x2 · epub ·
games · feed · lint 0 · APK builds. Deployed 16:46.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01KCTbCwwSYKp5XjD82tWMid